[package]
name = "deno-cloudrun"
version = "0.1.0"
authors = ["narumincho"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
http = "0.2.8"
uuid = { version = "1.1.1", features = ["v4"] }
chrono = "0.4.19"